# agent-tools

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent-skills-presentation-notes.pptx  agent-skills-presentation.pptx
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
apps/cli/: README.md  package-lock.json  package.json  tsconfig.json
apps/task-manager/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.server.json  vite.config.ts
apps/task-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/task-manager/src-tauri/icons/: icon.icns
apps/task-manager/src-tauri/src/: discovery.rs  lib.rs  session.rs  specs.rs  tasks.rs  watcher.rs
claude/claude-tools/: README.md
claude/core-tools/: README.md
claude/cs-tools/: README.md
claude/dev-tools/: README.md
claude/git-tools/: README.md
claude/opencode-tools/: README.md
claude/plugin-tools/: README.md
claude/sdd-tools/: DEEP-DIVE.md  README.md
claude/tdd-tools/: README.md
cline/: README.md
internal/docs/: codebase-analysis-report-2026-03-21.md  codebase-analysis-report-2026-03-23.md  codebase-analysis-report-2026-04-07.md  codebase-analysis-report-2026-04-09.md  enterprise-agent-runtime-architecture.md  plugin-ecosystem-analysis.md
internal/prompts/: agent-tools-plugin.md  mr-skill.md
internal/reports/: add-analyze-spec-skill-2026-03-23.md  agent-reorganization-2026-03-21.md  (+34 more)
plugins/: manifest.json
scripts/: validate-manifest.sh
skills/: README.md  manifest.json
(+619 files in other folders)
